Fix NoSuchMethodError:isBlank on older JDKs